--- a/01_GettingStarted/index.html
+++ b/01_GettingStarted/index.html
@@ -5,7 +5,7 @@
 		<script type="text/javascript" src="../three.min.js" ></script>
 		<script type="text/javascript" src="demo.js" ></script>
 	</head>
-	<body>
+	<body style="text-align:center;">
 		
 	</body>
 </html>
