added video 5 code

--- a/05_Models/index.html
+++ b/05_Models/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Demo 04</title>
+		<title>Demo 05</title>
 		<script type="text/javascript" src="../three.min.js" ></script>
+		
+		<script type="text/javascript" src="../MTLLoader.js" ></script>
+		<script type="text/javascript" src="../OBJLoader.js" ></script>
+		
 		<script type="text/javascript" src="demo.js" ></script>
 	</head>
 	<body style="text-align:center;">
