remove wireframe toggle button, change HTML title

--- a/08_GunView/index.html
+++ b/08_GunView/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Demo 07</title>
+		<title>Demo 08</title>
 		<script type="text/javascript" src="../three.min.js" ></script>
 		
 		<script type="text/javascript" src="../MTLLoader.js" ></script>
@@ -10,7 +10,9 @@
 		<script type="text/javascript" src="demo.js" ></script>
 	</head>
 	<body style="text-align:center;">
-		<span style="position:absolute;top:0px;left:0px;"><input type="button" value="Toggle Wireframe" onclick="mesh.material.wireframe=!mesh.material.wireframe;meshFloor.material.wireframe=!meshFloor.material.wireframe;"/><br/>WASD to move.<br/>Arrow keys to turn.</span>
+		<span style="position:absolute;top:0px;left:0px;">
+			WASD to move.<br/>Arrow keys to turn.
+		</span>
 	</body>
 </html>
 
